puppet (5.5.10-4~bpo9+1sci9u1) scibian9; urgency=medium

  [ Kwame Amedodji ]
  * Rebuild for stretch-backports.

  [ Kwame AMEDODJI ]

 -- Kwame AMEDODJI <kwame-externe.amedodji@edf.fr>  Mon, 12 Apr 2021 10:20:48 +0200

puppet (5.5.10-4) unstable; urgency=medium

  * Team upload.
  * Added a puppet-master.NEWS file, as suggested by the release team.

 -- Thomas Goirand <zigo@debian.org>  Mon, 17 Jun 2019 11:44:21 +0200

puppet (5.5.10-3) unstable; urgency=medium

  * Team upload.
  * Add a cron.daily job to clean-up /var/lib/puppet/reports for any report
    that is older than 30 days to avoid filling-up a puppet-master hard drive
    until it's full (Closes: #930033).

 -- Thomas Goirand <zigo@debian.org>  Thu, 06 Jun 2019 10:24:27 +0200

puppet (5.5.10-2) unstable; urgency=medium

  * Make sure oj does not use BigDecimals on data load (Closes: #923976)

 -- Apollon Oikonomopoulos <apoikos@debian.org>  Tue, 12 Mar 2019 12:51:05 +0200

puppet (5.5.10-1) unstable; urgency=medium

  * New upstream bugfix release; see
    https://puppet.com/docs/puppet/5.5/release_notes.html#puppet-5510
  * Bump Standards-Version to 4.3.0; no changes needed

 -- Apollon Oikonomopoulos <apoikos@debian.org>  Wed, 16 Jan 2019 10:56:17 +0200

puppet (5.5.8-1) unstable; urgency=medium

  * New upstream bugfix release; see
    https://puppet.com/docs/puppet/5.5/release_notes.html#puppet-557 and
    https://puppet.com/docs/puppet/5.5/release_notes.html#puppet-558
  * d/watch: only look for Puppet 5 versions for the time being
  * Override the source-contains-prebuilt-windows-binary lintian tag for
    ext/windows/eventlog/puppetres.dll. The DLL source is provided in
    ext/windows/eventlog/puppetres.mc.

 -- Apollon Oikonomopoulos <apoikos@debian.org>  Fri, 09 Nov 2018 09:33:05 +0200

puppet (5.5.6-1) unstable; urgency=medium

  * New upstream bugfix release; see
    https://puppet.com/docs/puppet/5.5/release_notes.html#puppet-556
  * Bump Standards-Version to 4.2.1; no changes needed